directoryContactTabsData-sample (1.0.0)
  * Initial release
-- May 3 2010