@@ -1,3 +1,8 @@
+directoryContactTabsEngine (1.0.1)
+  * Add Thunderbird 3.1 compatibility
+  * Fix a memory issue in an event listener
+-- Sep 7 2010
+
 directoryContactTabsEngine (1.0.0)
   * Initial release
 -- May 3 2010
