@@ -1,3 +1,7 @@
+directoryContactTabsData-sample (1.0.1)
+  * Add Thunderbird 3.1 compatibility
+-- Sep 7 2010
+
 directoryContactTabsData-sample (1.0.0)
   * Initial release
 -- May 3 2010
